style: changed style

--- a/dummy-blog.html
+++ b/dummy-blog.html
@@ -9,83 +9,54 @@
 
   <body>
     <nav class="navigation container">
-      <div class="nav-brand"><a href="/">raviyadav</a></div>
-      <ul class="list-non-bullet nav-pills">
-        <li class="list-item-inline">
+      <div class="navName"><a href="/">ravi yadav</a></div>
+      <ul class="listBullet navMain">
+        <li class="listItemInline">
           <a class="link" href="/">home</a>
         </li>
-        <li class="list-item-inline">
+        <li class="listItemInline">
           <a class="link" href="/projects.html">projects</a>
         </li>
-        <li class="list-item-inline">
-          <a class="link link-active" href="/blogs.html">blogs</a>
+        <li class="listItemInline">
+          <a class="link activePage" href="/blogs.html">blogs</a>
         </li>
       </ul>
     </nav>
 
-    <header class="hero">
-      <h1 class="hero-heading">
-        this is a <span class="heading-inverted">dummy</span> blog
+    <header class="mainHeader">
+      <h1 class="mainHeader-heading">
+        this is a <span class="headingBold">dummy</span> blog
       </h1>
     </header>
 
-    <article class="container-center showcase-blog">
+    <article class="containerCenter mainListBox-blog">
       <p>
-        Dummy text: Its function as a filler or as a tool for comparing the
-        visual impression of different typefaces Dummy text is text that is used
-        in the publishing industry or by web designers to occupy the space which
-        will later be filled with 'real' content. This is required when, for
-        example, the final text is not yet available. Dummy text is also known
-        as 'fill text'. It is said that song composers of the past used dummy
-        texts as lyrics when writing melodies in order to have a 'ready-made'
-        text to sing with the melody. Dummy texts have been in use by
-        typesetters since the 16th century.
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cum ipsam, suscipit quia fuga doloribus expedita commodi dolores temporibus repellat, atque incidunt aliquid inventore architecto recusandae accusantium labore cupiditate magni, placeat quaerat! Magnam earum iure dolor magni expedita vero quisquam eaque quam? Animi dolore harum incidunt eos. Error, accusantium officiis? Molestiae maxime dignissimos ducimus sint earum a odio corrupti sed fuga animi non ex quod iste natus, rem optio cumque reiciendis! Ullam, voluptatibus. Voluptas, debitis, ullam perspiciatis minus dicta animi facilis temporibus non, earum tenetur iusto quisquam similique labore sit velit exercitationem eum quidem rerum architecto placeat! Harum, modi nam?
       </p>
 
-      <h2>The usefulness of nonsensical content</h2>
+      <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h2>
       <p>
-        Dummy text is also used to demonstrate the appearance of different
-        typefaces and layouts, and in general the content of dummy text is
-        nonsensical. Due to its widespread use as filler text for layouts,
-        non-readability is of great importance: human perception is tuned to
-        recognize certain patterns and repetitions in texts. If the distribution
-        of letters and 'words' is random, the reader will not be distracted from
-        making a neutral judgement on the visual impact and readability of the
-        typefaces (typography), or the distribution of text on the page (layout
-        or type area). For this reason, dummy text usually consists of a more or
-        less random series of words or syllables. This prevents repetitive
-        patterns from impairing the overall visual impression and facilitates
-        the comparison of different typefaces. Furthermore, it is advantageous
-        when the dummy text is relatively realistic so that the layout
-        impression of the final publication is not compromised.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi repudiandae beatae fugiat recusandae, corrupti dolores ut accusamus, ipsam accusantium vel unde at explicabo error velit possimus perferendis saepe veniam quo. Veritatis voluptatum inventore, rem, assumenda accusantium perferendis, recusandae nihil sequi voluptate natus aut itaque soluta est nisi perspiciatis similique! Dicta, est sit. Earum exercitationem consequuntur cum natus ratione quasi facilis maiores officiis in similique autem maxime aperiam inventore, repellendus laborum velit laudantium. Eaque corporis quisquam quibusdam porro, harum dolores nisi rem. Ratione odio enim distinctio in quidem placeat, ipsam culpa laboriosam totam ducimus illo, dolorem, esse quia excepturi rerum aliquam veritatis eveniet sequi magnam ad voluptatem iste! Molestias hic porro quia soluta! Natus dolore iure eligendi laudantium in commodi mollitia facere sit accusantium autem fuga, impedit odit ipsam quam expedita aliquid odio praesentium soluta reprehenderit corporis excepturi quod! Velit, nam.
       </p>
 
       <h2>
-        Incomprehensibility or readability? <small>That is the question.</small>
+        Lorem ipsum dolor sit amet consectetur adipisicing.
       </h2>
       <p>
-        The most well-known dummy text is the 'Lorem Ipsum', which is said to
-        have originated in the 16th century. Lorem Ipsum is composed in a
-        pseudo-Latin language which more or less corresponds to 'proper' Latin.
-        It contains a series of real Latin words. This ancient dummy text is
-        also incomprehensible, but it imitates the rhythm of most European
-        languages in Latin script. The advantage of its Latin origin and the
-        relative meaninglessness of Lorum Ipsum is that the text does not
-        attract attention to itself or distract the viewer's attention from the
-        layout.
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde minus in ratione deleniti sequi officia tenetur numquam, aspernatur culpa magni odio, amet nam aliquam asperiores! Mollitia cupiditate ducimus dignissimos id. Voluptate exercitationem consectetur fugit vitae. Officia adipisci obcaecati amet totam natus maiores, eos autem placeat excepturi ea accusantium fuga aliquam odit expedita veritatis atque repudiandae alias molestiae incidunt. Natus, quit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem eum dolore, numquam eligendi mollitia rerum soluta et quibusdam, sed aspernatur ipsum suscipit doloribus omnis harum odio quas sit iste reprehenderit ipsam consectetur ducimus id. Fuga molestias eveniet quam modi, voluptatibus dolores natus dolore voluptate? Fugiat labore expedita quam quisquam repudiandae magnam vero soluta fuga ab numquam, non voluptatem itaque exercitationem. Placeat vel asperiores adipisci mollitia quam sit voluptates et distinctio repellendus cumque atque, dicta possimus vitae, commodi sunt illo odio? Illum et dolores nobis, eveniet accusantium fugit. Rerum eaque quisquam quasi modi minima tenetur. Pariatur distinctio ad velit ipsum nisi?
       </p>
     </article>
 
     <footer class="footer">
         <div class="footer-header">social media presence</div>
-        <ul class="social-links list-non-bullet">
-          <li class="list-item-inline">
+        <ul class="social-links listBullet">
+          <li class="listItemInline">
             <a class="link" href="https://github.com/RaviYadav3003"> github </a>
           </li>
-          <li class="list-item-inline">
+          <li class="listItemInline">
             <a class="link" href="https://twitter.com/raviyadav4013"> twitter </a>
           </li>
-          <li class="list-item-inline">
+          <li class="listItemInline">
             <a class="link" href="https://www.linkedin.com/in/ravi-yadav-294862252/">
               linkedin
             </a>
