--- a/projects.html
+++ b/projects.html
@@ -8,29 +8,29 @@
   </head>
   <body>
     <nav class="navigation container">
-      <div class="nav-brand"><a href="/">raviyadav</a></div>
-      <ul class="list-non-bullet nav-pills">
-        <li class="list-item-inline">
+      <div class="navName"><a href="/">ravi yadav</a></div>
+      <ul class="listBullet navMain">
+        <li class="listItemInline">
           <a class="link" href="/">home</a>
         </li>
-        <li class="list-item-inline">
-          <a class="link link-active" href="/projects.html">projects</a>
+        <li class="listItemInline">
+          <a class="link activePage" href="/projects.html">projects</a>
         </li>
-        <li class="list-item-inline">
+        <li class="listItemInline">
           <a class="link" href="/blogs.html">blogs</a>
         </li>
       </ul>
     </nav>
 
-    <header class="hero">
-      <h1 class="hero-heading">
-        see my <span class="heading-inverted"> code</span>
+    <header class="mainHeader">
+      <h1 class="mainHeader-heading">
+        see my <span class="headingBold"> code</span>
       </h1>
     </header>
 
-    <ul class="list-non-bullet">
+    <ul class="listBullet">
       <li>
-        <article class="showcase-list container container-center ow">
+        <article class="mainListBox container containerCenter box">
           <h1>profit and loss</h1>
           <small>september, 2022</small>
           <p>
@@ -39,13 +39,13 @@
           </p>
 
           <a
-            class="link link-primary"
+            class="link link1"
             href="https://profiandlossapp.netlify.app/"
           >
             Live Project
           </a>
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/Profit-LossApp"
           >
             View Source
@@ -54,7 +54,7 @@
       </li>
 
       <li>
-        <article class="showcase-list container container-center">
+        <article class="mainListBox container containerCenter box">
           <h1>palindrome-birthdays</h1>
           <small>september, 2022</small>
           <p>
@@ -63,13 +63,13 @@
           </p>
 
           <a
-            class="link link-primary"
+            class="link link1"
             href="https://birthdaypalindrome2.netlify.app/"
           >
             Live Project
           </a>
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/Birthday-Palindrome"
           >
             View Source
@@ -78,19 +78,19 @@
       </li>
 
       <li>
-        <article class="showcase-list container container-center ow">
+        <article class="mainListBox container containerCenter box">
           <h1>learn-triangles</h1>
           <small>september, 2022</small>
           <p>A website which helps you to learn about triangles</p>
 
           <a
-            class="link link-primary"
+            class="link link1"
             href="https://funwithtrianglesapp1.netlify.app/aot"
           >
             Live Project
           </a>
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/Fun_With_Triangles"
           >
             View Source
@@ -99,7 +99,7 @@
       </li>
 
       <li>
-        <article class="showcase-list container container-center">
+        <article class="mainListBox container containerCenter box">
           <h1>is-your-birthday-lucky</h1>
           <small>september, 2022</small>
           <p>
@@ -108,13 +108,13 @@
           </p>
 
           <a
-            class="link link-primary"
+            class="link link1"
             href="https://birthday-lucky2.netlify.app/"
           >
             Live Project
           </a>
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/BirthdayLucky"
             >View Source</a
           >
@@ -122,7 +122,7 @@
       </li>
 
       <li>
-        <article class="showcase-list container container-center ow">
+        <article class="mainListBox container containerCenter box">
           <h1>cash-register-manager</h1>
           <small>september, 2022</small>
           <p>
@@ -132,13 +132,13 @@
           </p>
 
           <a
-            class="link link-primary"
+            class="link link1"
             href="https://cashregisterapp1.netlify.app/"
           >
             Live Project
           </a>
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/Cash-register-manager"
             >View Source</a
           >
@@ -146,7 +146,7 @@
       </li>
 
       <li>
-        <article class="showcase-list container container-center">
+        <article class="mainListBox container containerCenter box">
           <h1>travel place</h1>
           <small>september, 2022</small>
           <p>
@@ -154,11 +154,11 @@
             the genre. Made using ReactJS with love
           </p>
 
-          <a class="link link-primary" href="https://7ikgxz.csb.app/"
+          <a class="link link1" href="https://7ikgxz.csb.app/"
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/travel-place"
             >View Source</a
           >
@@ -166,7 +166,7 @@
       </li>
 
       <li>
-        <article class="showcase-list container container-center ow">
+        <article class="mainListBox container containerCenter box">
           <h1>emoji interpreter</h1>
           <small>september, 2022</small>
           <p>
@@ -174,11 +174,11 @@
             see this library of emojis with meaning
           </p>
 
-          <a class="link link-primary" href="https://g7s8bw.csb.app/"
+          <a class="link link1" href="https://g7s8bw.csb.app/"
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/emoji-interpreter"
             >View Source</a
           >
@@ -186,7 +186,7 @@
       </li>
 
       <li>
-        <article class="showcase-list container container-center">
+        <article class="mainListBox container containerCenter box">
           <h1>valyrian speak</h1>
           <small>september, 2022</small>
           <p>
@@ -195,13 +195,13 @@
             sometimes uses sentences that are different from his normal syntax!
           </p>
 
-          <a class="link link-primary" href="https://gotapp3.netlify.app/">Live Project</a>
-          <a class="link link-secondary" href="https://github.com/RaviYadav3003/GOT-App">View Source</a>
+          <a class="link link1" href="https://gotapp3.netlify.app/">Live Project</a>
+          <a class="link link2" href="https://github.com/RaviYadav3003/GOT-App">View Source</a>
         </article>
       </li>
 
       <li>
-        <article class="showcase-list container container-center ow">
+        <article class="mainListBox container containerCenter box">
           <h1>minionese</h1>
           <small>september, 2022</small>
           <p>
@@ -211,20 +211,20 @@
           </p>
 
           <a
-            class="link link-primary"
+            class="link link1"
             href="https://minionlangapp.netlify.app/"
             >Live Project</a
           >
           <a
-            class="link link-secondary"
-            href="https://github.com/RaviYadav3003/Minion-App/tree/main/Minion%20App"
+            class="link link2"
+            href="https://github.com/RaviYadav3003/Minion-App"
             >View Source</a
           >
         </article>
       </li>
 
       <li>
-        <article class="showcase-list container container-center">
+        <article class="mainListBox container containerCenter box">
           <h1>how well do you know me?</h1>
           <small>september, 2022</small>
           <p>
@@ -233,12 +233,12 @@
           </p>
 
           <a
-            class="link link-primary"
+            class="link link1"
             href="https://replit.com/@RaviYadav31/How-well-do-you-know-me-17?embed=1&output=1"
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/How-well-do-you-know-me-"
             >View Source</a
           >
@@ -246,7 +246,7 @@
       </li>
 
       <li>
-        <article class="showcase-list container container-center ow">
+        <article class="mainListBox container containerCenter box">
           <h1>are you a marvel fan?</h1>
           <small>september, 2022</small>
           <p>
@@ -254,12 +254,12 @@
           </p>
 
           <a
-            class="link link-primary"
+            class="link link1"
             href="https://replit.com/@RaviYadav31/quiz-on-marvel?embed=1&output=1"
             >Live Project</a
           >
           <a
-            class="link link-secondary"
+            class="link link2"
             href="https://github.com/RaviYadav3003/quiz-on-marvel"
             >View Source</a
           >
@@ -269,14 +269,14 @@
 
     <footer class="footer">
       <div class="footer-header">social media presence</div>
-      <ul class="social-links list-non-bullet">
-        <li class="list-item-inline">
+      <ul class="social-links listBullet">
+        <li class="listItemInline">
           <a class="link" href="https://github.com/RaviYadav3003"> github </a>
         </li>
-        <li class="list-item-inline">
+        <li class="listItemInline">
           <a class="link" href="https://twitter.com/raviyadav4013"> twitter </a>
         </li>
-        <li class="list-item-inline">
+        <li class="listItemInline">
           <a class="link" href="https://www.linkedin.com/in/ravi-yadav-294862252/">
             linkedin
           </a>
